<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp"
              android:orientation="vertical"
              android:background="@color/editor_background">
    <CheckBox android:id="@+id/wifi_checkbox"
              android:text="@string/wifi_checkbox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@color/text_color"
              android:layout_marginBottom="10dip"
            />
    <TextView android:text="@string/sync_interval"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall"
              android:textColor="@color/text_color"/>
    <Spinner android:id="@+id/spinner1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
            />
    <Button android:text="@string/save"
            android:id="@+id/prefs_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dip"
            android:layout_gravity="center_horizontal|bottom"
            />
</LinearLayout>